Shenandoah: Backout JDK-8234399

XMLWordPrintable

    • gc
    • b08
    • Verified

      (synopsis is provisional, please change as you see fit).

      I wonder if this is the same failure as JDK-8231999? Seems to only affect 15, not 14, though.

      $ CONF=linux-x86_64-server-fastdebug make images run-test TEST=compiler/jsr292/CallSiteDepContextTest.java TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC"

      # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/classfile/javaClasses.cpp:3962), pid=17116, tid=17138
      # Error: assert(java_lang_invoke_CallSite::is_instance(call_site)) failed
      #
      # JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, tiered, compressed oops, shenandoah gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xc635f5] java_lang_invoke_CallSite::context_no_keepalive(oop)+0xa5


      Current thread (0x00007f5170004800): GCTaskThread "Shenandoah GC Threads#3" [stack: 0x00007f516e4c7000,0x00007f516e5c7000] [id=17138]

      Stack: [0x00007f516e4c7000,0x00007f516e5c7000], sp=0x00007f516e5c5ba0, free space=1018k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xc635f5] java_lang_invoke_CallSite::context_no_keepalive(oop)+0xa5
      V [libjvm.so+0x11b029b] MethodHandles::clean_dependency_context(oop)+0x3b
      V [libjvm.so+0x120a881] nmethod::flush_dependencies(bool)+0x251
      V [libjvm.so+0x145db48] ShenandoahNMethodUnlinkClosure::do_nmethod(nmethod*)+0x1a8
      V [libjvm.so+0x14e86e5] ShenandoahConcurrentNMethodIterator::nmethods_do(NMethodClosure*)+0x95
      V [libjvm.so+0x145d91b] ShenandoahUnlinkTask::work(unsigned int)+0x2b
      V [libjvm.so+0x17d4f50] GangWorker::loop()+0xe0
      V [libjvm.so+0x16a17d6] Thread::call_run()+0xf6
      V [libjvm.so+0x129da76] thread_native_entry(Thread*)+0x116

            Assignee:
            Zhengyu Gu
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: