8237874: Shenandoah: Backout JDK-8234399

Reviewed-by: shade