src/hotspot/share/gc/shenandoah/shenandoahBarrierSet.cpp
@@ -260,7 +260,12 @@ oop ShenandoahBarrierSet::load_reference_barrier_native_impl(oop obj, T* load_ad
 
   ShenandoahMarkingContext* const marking_context = _heap->marking_context();
   if (_heap->is_concurrent_root_in_progress() && !marking_context->is_marked(obj)) {
-    return NULL;
+    Thread* thr = Thread::current();
+    if (thr->is_Java_thread()) {
+      return NULL;
+    } else {
+      return obj;
+    }
   }
 
   oop fwd = load_reference_barrier_not_null(obj);
@@ -277,3 +282,4 @@ void ShenandoahBarrierSet::clone_barrier_runtime(oop src) {
     clone_barrier(src);
   }
 }
+
